# geoarchive

./: 404.html  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
css/: custom.css
geoarchive/: __init__.py  geokb.py  sciencebase.py  zotero.py
modules/zotero/: index.html
notebooks/: GeoArchive - Zotero - W3ID_URL.ipynb
search/: search_index.json
tests/: conftest.py  test_geokb.py  test_sciencebase.py  test_zotero.py
