[tool.poetry]
name = "geoarchive"
version = "0.1.2"
description = "Utilities for the USGS GeoArchive"
authors = ["Sky Bristol <sbristol@usgs.gov>"]
license = "The Unlicense"
readme = "README.md"
repository = "https://github.com/skybristol/geoarchive"


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
pyzotero = "^1.5.1"
pycountry = "^22.1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
