[tool.poetry]
name = "geoarchive"
version = "0.2.0"
description = "Utilities for the USGS GeoArchive"
authors = ["Sky Bristol <sbristol@usgs.gov>"]
license = "The Unlicense"
readme = "README.md"
repository = "https://github.com/skybristol/geoarchive"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
pyzotero = "^1.5.2"
sciencebasepy = "^2.0.0"
pdfminer.six = "^20201018"
PyPDF2 = "^3.0"
pyahocorasick = "^2.1"
wbmaker = "^0.0.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.5"
flake8 = "^4.0.1"
mkdocs = "^1.2.3"
mkautodoc = { git = "https://github.com/tomchristie/mkautodoc.git", branch = "master" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
